Text changes register button IE bugfix programme map size bugfix

--- a/app/assets/stylesheets/component.scss
+++ b/app/assets/stylesheets/component.scss
@@ -15,7 +15,8 @@
 }
 
 .button-register {
-    background-color: #53b7b7d6;
+    //background-color: #53b7b7d6;
+    background-color: rgba(83, 183, 183, 0.84);
     border: none;
     color: white !important;
     padding: 13px 100px;
