--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -24,7 +24,7 @@
 
   background-size: cover;
   background-position: center;
-  padding-top: 65%;// !important;      //define height of image
+  padding-top: 60%;// !important;      //define height of image
   padding-bottom: 0% ;
   padding-left: 0px;
   padding-right: 0px;
