--- a/app/assets/stylesheets/programmes_bxl.scss
+++ b/app/assets/stylesheets/programmes_bxl.scss
@@ -1,12 +1,12 @@
 .map-img {
-  margin-top: 2%;
-  margin-bottom: 5%;
+  margin-top: -5%;
+  margin-bottom: -5%;
   background-image: image-url('carte1toit2age.png') ;
   background-size: cover;
-  transform: scale(0.95, 0.95);
-  -ms-transform: scale(0.95, 0.95);
-  -webkit-transform: scale(0.95, 0.95);
-  padding-top: 65% !important;
+  transform: scale(0.65, 0.65);
+  -ms-transform: scale(0.65, 0.65);
+  -webkit-transform: scale(0.65, 0.65);
+  padding-top: 60% !important;
 }
 
 //@media (min-width: 768px) and (max-width: 991px) {
